--- a/zen-training/layouts/app/src/main/AndroidManifest.xml
+++ b/zen-training/layouts/app/src/main/AndroidManifest.xml
@@ -9,14 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LinearLayoutActivity">
+        <activity android:name=".GridLayoutActivity"></activity>
+        <activity android:name=".TableLayoutActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".RelativeLayoutActivity"></activity>
+        <activity android:name=".LinearLayoutActivity" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
